id wise category and product creation
