# routes/categories.js
@@ -5,7 +5,7 @@ const ctrl = require('../controllers/categoryController');
 // GET /api/categories
 router.get('/', ctrl.listCategories);
 
-// GET /api/categories/:slug
-router.get('/:slug', ctrl.getCategoryBySlug);
+// GET /api/categories/:id
+router.get('/:id', ctrl.getCategoryById);
 
 module.exports = router;
